[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/bee_enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Bee_Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 1.9205

[sub_resource type="CircleShape2D" id=2]
radius = 14.5191

[sub_resource type="CircleShape2D" id=3]
radius = 96.047

[node name="Bee_Enemy" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0834274, -3.08682 )
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, -3.08682 )
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 0, -3.00339 )
shape = SubResource( 3 )
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
